# Project_Aira

./: .gitignore  Cargo.toml  README.md  aira-serve  aira-serve.bat  install.sh
aira/: .gitignore  Cargo.toml
aira/aira_brain/: Cargo.toml
aira/aira_brain/src/: aira.rs  config.rs  emotion.rs  lib.rs  llm.rs  stt.rs  tts.rs
aira/aira_server/: Cargo.toml
aira/aira_server/src/: main.rs  models.rs  states.rs
aira/aira_server/src/api/: camera.rs  chat.rs  emotion.rs  mod.rs  stt.rs  tts.rs
aira/frontend/: .gitignore  eslint.config.js  package-lock.json  package.json
aira/frontend/src/: App.css  App.jsx  App.tsx  index.css  main.tsx
aira/frontend/src/api/: chatAPI.ts  storageAPI.ts
aira/frontend/src/components/: CameraSensor.tsx  Chat.tsx  EyeVisualization.tsx  Landing.tsx  PrivacyModal.tsx  Sidebar.tsx  VoiceController.tsx
aira/frontend/src/types/: api.ts  camera.ts  chat.ts
aira/frontend/src/utils/: Audiomanager.ts
aira/src/: main.rs
aira_brain/src/: aira.rs  lib.rs  stt.rs
src/: main.rs
