[package]
name = "aira_brain"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

whisper-rs = { version = "0.15.1", features = ["cuda"] }
ort-sys = { version = "=2.0.0-rc.9", default-features = false }
llama_cpp = "0.3.2"
anyhow = "1.0.100"
piper-rs = "0.1.9"
tract-onnx = "0.21.0"
hound = "3.5.1"
