[package]
name = "aira_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.8", features = ["macros", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
hound = "3.5"
base64 = "0.21"
axum-extra = { version = "0.12.5", features = ["multipart"] }
async-trait = "0.1.77"

aira_brain = { path = "../aira_brain" }
bytes = "1.11.1"
